# tux

./: .gitignore  Cargo.toml  Dockerfile  INSTALL.md  README.md  flake.nix
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: tux.rb
tux-cli/: Cargo.toml
tux-cli/src/: daemon.rs  init.rs  main.rs  spinner.rs
tux-core/: Cargo.toml
tux-core/src/: agent.rs  backend.rs  config.rs  context.rs  knowledge.rs  lib.rs  models.rs
tux-core/src/tools/: clipboard.rs  confirm.rs  files.rs  install.rs  knowledge.rs  mod.rs  screenshot.rs
tux-core/tests/: eval.rs
tux-gui/: Cargo.toml
tux-gui/src/: main.rs
