[workspace]
resolver = "2"
members = ["tux-core", "tux-cli", "tux-gui"]
# tux-gui needs gtk4 system libs; keep it out of default so `cargo check`
# works without entering the nix shell.
default-members = ["tux-core", "tux-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rothgar/tux"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "process"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
