[package]
name = "tux-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core agent loop, tools, and backends for tux"

[features]
default = []
# Turn on to compile the llama.cpp backend. Requires the nix dev shell
# (cmake, clang, libclang) so llama-cpp-2 can build.
llama = ["dep:llama-cpp-2", "dep:encoding_rs"]
# Add Vulkan acceleration on top of the llama backend. Useful for iGPUs
# (Intel Iris, AMD APUs) on machines without a discrete GPU. Needs the
# vulkan-loader / vulkan-headers system libs (in the nix dev shell).
vulkan = ["llama", "llama-cpp-2/vulkan"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
toml = { workspace = true }

llama-cpp-2 = { version = "0.1.146", optional = true, features = ["mtmd"] }
encoding_rs = { version = "0.8", optional = true }
